package com.velora.vehicle;

/**
 * Represents the current status of a vehicle.
 *
 * @author 97259
 */
public enum VehicleStatus {
    AVAILABLE,
    RENTED,
    MAINTENANCE
}