package com.velora.vehicle;

/**
 * Represents the supported vehicle types in the rental system.
 *
 * @author 97259
 */
public enum VehicleType {
    CAR,
    SUV,
    HYBRID_CAR,
    ELECTRIC_VEHICLE,
    ELECTRIC_BIKE,
    MOTORCYCLE,
    TRUCK
}